@@ -712,7 +712,7 @@ public class JSONArray
      */
     public JSONArray put( double value ) throws JSONException
     {
-        Double d = new Double( value );
+        Double d = value;
         JSONObject.testValidity( d );
         put( d );
         return this;
@@ -726,7 +726,7 @@ public class JSONArray
      */
     public JSONArray put( int value )
     {
-        put( new Integer( value ) );
+        put( Integer.valueOf( value ) );
         return this;
     }
 
@@ -738,7 +738,7 @@ public class JSONArray
      */
     public JSONArray put( long value )
     {
-        put( new Long( value ) );
+        put( Long.valueOf( value ) );
         return this;
     }
 
@@ -830,7 +830,7 @@ public class JSONArray
      */
     public JSONArray put( int index, int value ) throws JSONException
     {
-        put( index, new Integer( value ) );
+        put( index, Integer.valueOf( value ) );
         return this;
     }
 
@@ -846,7 +846,7 @@ public class JSONArray
      */
     public JSONArray put( int index, long value ) throws JSONException
     {
-        put( index, new Long( value ) );
+        put( index, Long.valueOf( value ) );
         return this;
     }
 
